# RoutR_MauraDr

./: .gitignore  ADDITIONAL_FEATURES.md  CHANGELOG.md  CLI_GUI_FEATURE_PROPOSAL.md  COMPLEMENTARY_FEATURES.md  COMPLEMENTARY_FEATURES_PROPOSAL.md  EXTENDED_COMPLEMENTARY_FEATURES.md  EXTRA_FEATURE_PROPOSAL.md  FEATURE_ADDITIONS.md  FEATURE_PROPOSAL.md  FURTHER_FEATURES.md  MANIFEST.in  MORE_FEATURES_PROPOSAL.md  NEW_FEATURE_PROPOSAL.md  NetVision.sh  README.md  install-apt.sh  install-brew.sh  lightning_network_grepper.sh  proposals.md  pyproject.toml  requirements.txt  runtests.sh  scoring.py  setup.sh
.github/workflows/: ci.yml  publish.yml
Downloads/RoutR_MauraDr-main_pi/: .env.example  .eslintrc.json  CHANGELOG.md  README.md  README_IMPROVEMENTS.md  USERGUIDE.md
data/: baseline.json  cve_db.json  firmware_cache.json
plugins/: sample_plugin.py
tests/: test_attack_mapping.py  test_baseline.py  test_binance_execution.py  test_certificate.py  test_d3_export.py  test_gpu_monitor.py  test_internet_health.py  test_network_map.py  test_new_modules.py  test_plugin_harness.py  test_plugin_loader.py  test_plugin_manager.py  test_portfolio.py  test_query_library.py  test_runner.py  test_scan_profiles.py  test_update_db.py  test_wrappers.py
tooling/: NetVision.sh  check_ldap.sh  check_ldap.sh.disabled  check_ldap_config.sh  check_ldap_config.sh.disabled  info_broadcast_REST.txt  info_broadcaster.sh  smb_hash_grep.py
web/: README.md  auto_config.py  config.ini  config.json  config.py  config.yaml  db_config.py  logging.py  main.py  requirements.txt  run.py  scanning.py
(+103 files in other folders)
